Fix carousel jump by setting aspect ratio and fixed height for carousel images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -460,6 +460,12 @@ button[type="submit"] {
 }
 
 .carousel-inner {
+  aspect-ratio: 16 / 9;
+  width: 100%;
+  max-height: 500px;
+}
+
+.carousel-inner {
     position: relative;
     width: 100%;
     max-width: 80%;
@@ -468,6 +474,12 @@ button[type="submit"] {
     overflow: hidden;
     border: 1px solid #fff;
     border-radius: 5px;
+}
+
+.carousel-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .carousel-indicators li {
